[package]
name = "luna-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.7", features = ["validation"] }

[lints.clippy]
not_unsafe_ptr_arg_deref = "allow" # FFI 场景：指针由调用者保证有效性
